# c-embedded-utils

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  License.md  README.md  cmake-variants.yaml  compile_commands.json
.devcontainer/: devcontainer.json
.github/workflows/: ci_runner.yml
build_scripts/: build.sh  build_docs.sh  dev_env_build.sh  dev_run_doxygen.sh
cemb/: CMakeLists.txt  cemb.c
cmake/: AddCEmbeddedModule.cmake
collections/: CMakeLists.txt
collections/inc/: bounded_heap.h  circular_buffer.h  copy_queue.h  fast_circular_buffer.h  object_pool.h  ptr_stack.h  static_pool.h
collections/src/: bounded_heap.c  circular_buffer.c  copy_queue.c  object_pool.c  ptr_stack.c  static_pool.c
collections/test/: mock_object_pool.c  test_bounded_heap.c  test_bounded_heap.h  test_circular_buffer.c  test_circular_buffer.h  test_copy_queue.c  test_copy_queue.h  test_fast_circular_buffer.c  test_fast_circular_buffer.h  test_object_pool.c  test_object_pool.h  test_ptr_stack.c  test_ptr_stack.h  test_static_pool.c  test_static_pool.h
collections/test_runner/: test_collections_main.c
docs/: GeneralGuidelines.md  ModuleConventions.md  StyleGuide.md
docs/styles/: plantuml_themes.puml
error_codes/: CMakeLists.txt  error_codes.h
include/cemb/: bounded_heap.h  bsearch_iter.h  copy_queue.h  error_codes.h  i_pool_allocator.h  pack.h  ptr_stack.h  simple_fsm.h  static_event_publisher.h  static_pool.h
lib/: CMakeLists.txt
lib/collections/inc/: bounded_heap.h  circular_buffer.h  fast_circular_buffer.h
lib/collections/src/: bounded_heap.c  circular_buffer.c  copy_queue.c  fast_circular_buffer.c  ptr_stack.c
lib/collections/test/: test_bounded_heap.c  test_circular_buffer.c  test_copy_queue.c  test_fast_circular_buffer.c  test_ptr_stack.c
lib/collections/test_runner/: test_collections_main.c
lib/error_codes/: CMakeLists.txt  error_codes.h
lib/events/: CMakeLists.txt
lib/events/src/: static_event_publisher.c
lib/events/test/: test_static_event_publisher.c
lib/mem_alloc/: CMakeLists.txt
lib/mem_alloc/inc/: object_pool.h  static_pool.h
lib/mem_alloc/src/: i_pool_allocator.c  static_pool.c
lib/mem_alloc/test/: mock_pool_allocator.h  test_i_pool_allocator.c  test_static_pool.c
lib/mem_alloc/test_runner/: test_mem_alloc_main.c
lib/operations/: CMakeLists.txt
lib/operations/inc/: bit_ops.h  numeric_ops.h
lib/operations/src/: bit_ops.c  numeric_ops.c
lib/operations/test/: test_bit_ops.c  test_numeric_ops.c
lib/pubsub/inc/: static_event_publisher.h
lib/simple_fsm/inc/: simple_fsm.h
lib/simple_fsm/src/: simple_fsm.c
lib/simple_fsm/test/: mock_fsm.c  mock_fsm.h  test_simple_fsm.c  test_simple_fsm.h
lib/simple_fsm/test_runner/: test_simple_fsm_main.c
lib/struct_pack/inc/: le_pack.h  pack.h
lib/struct_pack/src/: le_pack.c  pack.c
lib/struct_pack/test/: test_le_pack.c  test_pack.c
lock_primatives/: CMakeLists.txt
lock_primatives/inc/: critical_section.h
lock_primatives/test/: mock_critical_section.c  mock_critical_section.h  test_critical_section.c
lock_primitives/: CMakeLists.txt
lock_primitives/inc/: critical_section.h
lock_primitives/src/: critical_section.c
lock_primitives/test/: mock_critical_section.c  mock_critical_section.h  test_critical_section.c  test_critical_section.h
lock_primitives/test_runner/: test_lock_primitives_main.c
mem_alloc/: CMakeLists.txt
mem_alloc/inc/: static_pool.h
mem_alloc/src/: ptr_stack.c  static_pool.c
mem_alloc/test/: mock_object_pool.h  test_static_pool.c  test_static_pool.h
mem_utils/: CMakeLists.txt
mem_utils/inc/: mem_utils.h
mem_utils/src/: mem_utils.c
mem_utils/test/: test_mem_utils.c  test_mem_utils.h
mem_utils/test_runner/: test_mem_utils_main.c
object_pool/: CMakeLists.txt
object_pool/inc/: object_pool.h  static_pool.h
object_pool/src/: object_pool.c  static_pool.c
object_pool/test/: mock_object_pool.c  mock_object_pool.h  test_object_pool.c  test_static_pool.c
object_pool/test_runner/: test_object_pool_main.c
operations/: CMakeLists.txt
operations/inc/: bit_ops.h  numeric_ops.h
operations/test/: test_bit_ops.c  test_bit_ops.h  test_numeric_ops.c
operations/test_runner/: test_operations_main.c
pubsub/: CMakeLists.txt
pubsub/inc/: static_event_publisher.h
pubsub/src/: static_event_publisher.c
pubsub/test/: test_static_event_publisher.c  test_static_event_publisher.h
pubsub/test_runner/: test_pubsub_main.c
simple_fsm/: CMakeLists.txt
simple_fsm/inc/: simple_fsm.h
simple_fsm/src/: simple_fsm.c
simple_fsm/test/: mock_fsm.c  test_simple_fsm.c  test_simple_fsm.h  test_simple_fsm_mock_fsm.c  test_simple_fsm_mock_fsm.h
simple_fsm/test_runner/: test_simple_fsm_main.c
src/: CMakeLists.txt
src/collections/: CMakeLists.txt  bounded_heap.c  circular_buffer.c  copy_queue.c  fast_circular_buffer.c  ptr_stack.c
src/events/: CMakeLists.txt  static_event_publisher.c
src/mem_alloc/: CMakeLists.txt  i_pool_allocator.c  static_pool.c
src/operations/: CMakeLists.txt  bit_ops.c  numeric_ops.c
src/search_algos/: CMakeLists.txt  bsearch_iter.c
src/simple_fsm/: CMakeLists.txt  simple_fsm.c
src/struct_pack/: CMakeLists.txt  le_pack.c  pack.c
struct-pack/inc/: struct_pack.h
struct-pack/test/: test_struct_pack.h  test_vector3_example.h
struct_pack/: CMakeLists.txt
struct_pack/inc/: le_pack.h  pack.h  struct_pack.h
struct_pack/src/: le_pack.c  struct_pack.c
struct_pack/test/: test_le_pack.c  test_le_pack.h  test_pack.c  test_struct_pack.c  test_vector3_example.c
struct_pack/test_runner/: test_struct_pack_main.c
tests/: CMakeLists.txt  mock_fsm.h  mock_pool_allocator.c  mock_pool_allocator.h  test_bit_ops.c  test_bounded_heap.c  test_bsearch_iter.c  test_bsearch_iter.h  test_circular_buffer.c  test_copy_queue.c  test_fast_circular_buffer.c  test_i_pool_allocator.c  test_i_pool_allocator.h  test_le_pack.c  test_numeric_ops.c  test_numeric_ops.h  test_pack.c  test_pack.h  test_ptr_stack.c  test_runner.c  test_simple_fsm.c  test_static_event_publisher.c  test_static_pool.c
(+1 files in other folders)
