add_library(struct_pack STATIC)
target_include_directories(struct_pack PUBLIC inc)
target_sources(struct_pack PRIVATE src/struct_pack.c)

add_library(test_struct_pack STATIC)
target_include_directories(test_struct_pack PUBLIC test)
target_sources(test_struct_pack PRIVATE test/test_struct_pack.c test/test_vector3_example.c)
target_link_libraries(test_struct_pack struct_pack cemb_cmocka)

if (C_EMB_UTILS_CFG_PRODUCE_UNIT_TESTS)
    enable_testing()
    add_executable(test_struct_pack_main)
    target_link_libraries(test_struct_pack_main test_struct_pack)
    target_sources(test_struct_pack_main PRIVATE test_runner/test_struct_pack_main.c)
    add_test(test_struct_pack test_struct_pack_main)
endif()